# tag_sorter_db_program

tag-sorter-frontend/: package-lock.json  package.json  svelte.config.js
tag-sorter-frontend/src/lib/: get_db.ts  settings.ts  tag_input.svelte
tag-sorter-frontend/src/routes/: +layout.svelte  +page.svelte  DataView.svelte  Editing.svelte  Header.svelte  ItemPreview.svelte  SearchBox.svelte  file_operations.ts  item.ts  styles.css
tag-sorter-frontend/src/routes/edit/: +page.svelte  +page.ts
tag-sorter-frontend/src/routes/settings/: +page.svelte  +page.ts
tag-sorter-frontend/src/routes/source/: +page.svelte
tag_sorter_backend/: Cargo.toml  Rocket.toml
tag_sorter_backend/src/: clap_struct.rs  cores_headers.rs  edit.rs  get_db.rs  get_settings.rs  item.rs  main.rs  quick_sort.rs  search.rs  tag_search.rs  tag_suggestion.rs
tag_sorter_backend/src/select/: filter.rs  mod.rs  test.rs
